[XCHAT-15] - unanswered questions handled by whatsapp